--- a/snktest.html
+++ b/snktest.html
@@ -7,5 +7,76 @@
 </head>
 <body>
 
+	<div class="banner">
+		<div class="wrapper">
+			<h5>Eren from the Scouts Regiment presents</h5>
+			<img src="img/snk.jpeg" width="600" height="150" alt="Shingeki No Kyojin">
+			<h3>by Hajime Isayama</h3>
+			<a href="#info" class="cta-alt">Read More</a>
+		</div>
+	</div>
+	<div class="eren"></div>
+	<div class="mikasa"></div>
+	<div class="armin"></div>
+	<nav>
+		<a href="#" class="logo">Scouts Regiment</a>
+		<ul>
+			<li><a href="#signup">Sign Up</a></li>
+			<li><a href="#story">Story</a></li>
+			<li><a href="#info">More Info</a></li>
+		</ul>
+	</nav>
+	<div class="info" id="info>">
+		<h3>Join us in our mission!</h3>
+		<p>The <b>Scout Regiment</b> <i>(調査兵団 Chōsa Heidan)</i> is the branch of the Eldian military most actively involved in direct Titan combat, Titan study, human expansion, and outside exploration. Due to our constant expeditions and encounters with Titans, Scout Regiment members are the most skilled in using the omni-directional mobility gear</p>
+	</div>
+	<div class="sep"></div>
+	<div class="story" id="story">
+		<ul class="faction">
+			<li class="grey">&nbsp;</li>
+			<li class="blue drag">Scouts</li>
+			<li class="red">Garrison</li>
+			<li class="green">Military Police Brigade</li>
+		</ul>
+		<h4><i>"That day, the human race remembered the terror of being dominated by them, and the shame of being held captive in a birdcage..."</i>
+		</h4>
+		<p>Over 100 years ago, a natural predator of humanity appeared: the Titans, giant humanoid but mindless monsters whose sole purpose of existence seemed to be to devour humans. There was an insurmountable gap in power between them and mankind, and as a result, humanity was rapidly exterminated to the brink of extinction. The survivors responded by constructing three concentric walls: <b>Wall Maria</b>, <b>Wall Rose</b> and <b>Wall Sina</b>, which graced them with a century of peace.</p>
+		<p>However, one day a Colossal Titan far larger than any other seen before breached the outer wall, allowing the smaller Titans to invade the human territory and forcing the survivors to retreat to the inner walls. <b>Eren Jaeger</b>, a boy whose mother was eaten during the invasion, vowed to wipe every last Titan off the face of the Earth, and joined the military determined to exact his revenge.</p>
+	</div>
+	<div class="sep"></div>
+	<img src="img/team.jpg" width="300" height="400" alt="Armin">
+	<footer>
+		Made by a <a href="#">Potato</a>
+	</footer>
+	<div class="popup" id="signup">
+		<div class="blanket"></div>
+		<div class="content">
+			<h2>Fill in your particulars:</h2>
+			<form action="">
+				<div class="item">
+					<label>Your First Name</label>
+					<input type="text" placeholder="Stupid">
+				</div>
+				<div class="item">
+					<label>Your Last Name</label>
+					<input type="text" placeholder="McBaka">
+				</div>
+				<div class="item">
+					<label>Preference</label>
+					<input type="text" placeholder="Probably Survey Corps">
+				</div>
+				<div class="item">
+					<label>Favourite Titan</label>
+					<input type="text" placeholder="Colossal">
+				</div>
+				<button class="cta">I'm sure I wanna be eaten!</button>
+			</form>
+			<button class="close"></button>
+
+
+	</div>
+
+
+
 </body>
 </html>
