--- a/snktest.html
+++ b/snktest.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/snkcss.css">
 </head>
 <body>
-
 	<div class="banner">
 		<div class="wrapper">
 			<h5>Eren from the Scouts Regiment presents</h5>
-			<img src="img/snk.jpeg" width="600" height="150" alt="Shingeki No Kyojin">
-			<h3>by Hajime Isayama</h3>
-			<a href="#info" class="cta-alt">Read More</a>
+			<div class="attackontitan">
+				<!--<img src="img/snk.jpeg" width="600" height="150">-->
+			</div>
+			<h3><i>by Hajime Isayama</i></h3>
+			<a href="#info" class="cta-alt"><b>Read More</b></a>
 		</div>
 	</div>
 	<div class="eren"></div>
@@ -44,9 +45,9 @@
 		<p>However, one day a Colossal Titan far larger than any other seen before breached the outer wall, allowing the smaller Titans to invade the human territory and forcing the survivors to retreat to the inner walls. <b>Eren Jaeger</b>, a boy whose mother was eaten during the invasion, vowed to wipe every last Titan off the face of the Earth, and joined the military determined to exact his revenge.</p>
 	</div>
 	<div class="sep"></div>
-	<img src="img/team.jpg" width="300" height="400" alt="Armin">
+	<img src="img/team.jpg" width="300" height="400" alt="team">
 	<footer>
-		Made by a <a href="#">Potato</a>
+		Made by a <a href="https://www.alimentarium.org/en/system/files/thumbnails/image/AL027-01_pomme_de_terre_0.jpg" target="_blank">Potato &copy;</a>
 	</footer>
 	<div class="popup" id="signup">
 		<div class="blanket"></div>
